Fix Java 11 compatibility issues and improve setup script
- Replace .toList() with .collect(Collectors.toList()) for Java 11 compatibility
- Add proper Collectors import to UserService
- Improve Java version detection in setup script
- Better JAVA_HOME detection and setting
- Enhanced error handling for compilation failures
- Improved JAR file detection in setup script